Make hidden <input> tag visibility:hidden rather than display:none, so that on webkit, user can still submit forms by pressing ENTER while focused on an <input>.   Refs #11003, fixes #11275.
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@22387 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -92,6 +92,12 @@
 	line-height:1px;
 }
 
+.dijitOffScreen {
+	position: absolute !important;
+	visibility: hidden !important;
+	top: -10000px !important;
+}
+
 /*
  * Popup items have a wrapper div (dijitPopup)
  * with the real popup inside, and maybe an iframe too
